--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                 <select name="Divisions" id="Divisions">
                     <option value="Select One">--Select One--</option>
                     <option value="Dhaka">Dhaka</option>
-                    <option value="saab">Rangpur</option>
-                    <option value="opel">Rajshahi</option>
-                    <option value="audi">Khulna</option>
-                    <option value="Dhaka">Mymenshing</option>
-                    <option value="saab">Shylet</option>
-                    <option value="opel">Chittagong</option>
-                    <option value="audi">Barishal</option>
+                    <option value="Rangpur">Rangpur</option>
+                    <option value="Rajshahi">Rajshahi</option>
+                    <option value="khulna">Khulna</option>
+                    <option value="Mymenshing">Mymenshing</option>
+                    <option value="Shylet">Shylet</option>
+                    <option value="Chittagong">Chittagong</option>
+                    <option value="Barisal">Barishal</option>
                   </select>
                </div>
            </div>
@@ -100,9 +100,9 @@
                 <div class="selectbox-2">
                     <select name="Divisions" id="Divisions">
                         <option value="Select One">--Select One--</option>
-                        <option value="Dhaka">Graphics Design</option>
-                        <option value="saab">Digital Marketing</option>
-                        <option value="opel">Web Design & Development - 2020</option>
+                        <option value="GD">Graphics Design</option>
+                        <option value="DM">Digital Marketing</option>
+                        <option value="WDD">Web Design & Development - 2020</option>
                       </select>
                    </div>
             </div>
@@ -198,22 +198,21 @@
                     <select name="H-District" id="#">
                         <option value="Select One">--Select One--</option>
                         <option value="Dhaka">Dhaka</option>
-                        <option value="saab">Rangpur</option>
-                        <option value="opel">Rajshahi</option>
-                        <option value="audi">Khulna</option>
-                        <option value="Dhaka">Mymenshing</option>
-                        <option value="saab">Shylet</option>
-                        <option value="opel">Chittagong</option>
-                        <option value="audi">Barishal</option>
-                        <option value="Select One">--Select One--</option>
+                        <option value="Rangpur">Rangpur</option>
+                        <option value="Rajshahi">Rajshahi</option>
+                        <option value="khulna">Khulna</option>
+                        <option value="Mymenshing">Mymenshing</option>
+                        <option value="Shylet">Shylet</option>
+                        <option value="Chittagong">Chittagong</option>
+                        <option value="Barisal">Barishal</option>
                         <option value="Dhaka">Dhaka</option>
-                        <option value="saab">Rangpur</option>
-                        <option value="opel">Rajshahi</option>
-                        <option value="audi">Khulna</option>
-                        <option value="Dhaka">Mymenshing</option>
-                        <option value="saab">Shylet</option>
-                        <option value="opel">Chittagong</option>
-                        <option value="audi">Barishal</option>
+                        <option value="Rangpur">Rangpur</option>
+                        <option value="Rajshahi">Rajshahi</option>
+                        <option value="khulna">Khulna</option>
+                        <option value="Mymenshing">Mymenshing</option>
+                        <option value="Shylet">Shylet</option>
+                        <option value="Chittagong">Chittagong</option>
+                        <option value="Barisal">Barishal</option>
                     </select>
                 </div>
             </div>
@@ -224,22 +223,21 @@
                     <select name="upa-zilla" id="#">
                         <option value="Select One">--Select One--</option>
                         <option value="Dhaka">Dhaka</option>
-                        <option value="saab">Rangpur</option>
-                        <option value="opel">Rajshahi</option>
-                        <option value="audi">Khulna</option>
-                        <option value="Dhaka">Mymenshing</option>
-                        <option value="saab">Shylet</option>
-                        <option value="opel">Chittagong</option>
-                        <option value="audi">Barishal</option>
-                        <option value="Select One">--Select One--</option>
+                        <option value="Rangpur">Rangpur</option>
+                        <option value="Rajshahi">Rajshahi</option>
+                        <option value="khulna">Khulna</option>
+                        <option value="Mymenshing">Mymenshing</option>
+                        <option value="Shylet">Shylet</option>
+                        <option value="Chittagong">Chittagong</option>
+                        <option value="Barisal">Barishal</option>
                         <option value="Dhaka">Dhaka</option>
-                        <option value="saab">Rangpur</option>
-                        <option value="opel">Rajshahi</option>
-                        <option value="audi">Khulna</option>
-                        <option value="Dhaka">Mymenshing</option>
-                        <option value="saab">Shylet</option>
-                        <option value="opel">Chittagong</option>
-                        <option value="audi">Barishal</option>
+                        <option value="Rangpur">Rangpur</option>
+                        <option value="Rajshahi">Rajshahi</option>
+                        <option value="khulna">Khulna</option>
+                        <option value="Mymenshing">Mymenshing</option>
+                        <option value="Shylet">Shylet</option>
+                        <option value="Chittagong">Chittagong</option>
+                        <option value="Barisal">Barishal</option>
                     </select>
                 </div>
             </div>
